fix code spacing

--- a/personal-website/src/index.css
+++ b/personal-website/src/index.css
@@ -7,10 +7,10 @@
   --orange: #ffa500;
   --green: #006400;
   --salmon: #d88181;
+  --purple: #6401b5;
 }
 h1, h2, h3, p, label {
   font-family: 'Montserrat', sans-serif;
-  /* margin-bottom: 1.5em; */
 }
 
 p {
@@ -25,10 +25,6 @@ body {
   font-family: 'Montserrat', sans-serif,
 }
 
-/* code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-} */
 .container {
   display: flex;
   flex-direction: column;
@@ -45,12 +41,14 @@ body {
   justify-content: space-between;
   align-items: center;
 }
+
 .about .portrait {
   width: 50vw;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
+
 .about .description {
   width: 35vw;
 }
@@ -62,6 +60,7 @@ body {
   width: 50vw;
   margin-bottom: 20px;
 }
+
 .greeting {
   text-transform: uppercase;
   font-size: 3em;
@@ -89,6 +88,7 @@ body {
   display: flex;
   flex-wrap: wrap;
   margin: 0;
+  align-items: center;
 }
 
 .nav-list .list-item {
@@ -108,11 +108,11 @@ body {
   height: 150px;
 }
 
-.nav-list .list-item:hover {
+.nav-list .nav-link:hover {
   background-color: var(--salmon);
 }
 
-.nav-list .list-item {
+.nav-list .nav-link {
   transition: background-color 1s ease-out 150ms;
 }
 
@@ -125,8 +125,11 @@ body {
 }
 
 .nav-link {
+  display: flex;
   text-decoration: none;
   color: var(--white);
+  height: 100%;
+  align-items: center;
 }
 
   /* resume */
@@ -135,82 +138,101 @@ body {
   text-align: left;
   font-size: 18px;
 }
+
 .resume-columns {
   display: flex;
   margin-bottom: 24px;
 }
+
 .resume-columns .skills {
   width: 40vw;
 }
+
 .resume-columns .education {
   width: 40vw;
 }
+
 .jobs {
   display: flex;
   flex-direction: column;
   align-items: center;
   margin: 0 10vw;
 }
+
 .skills .job-title {
   font-size: 1.7em;
 }
+
 .resume .school-year, .school-degree, .school-location {
   margin: 0;
   text-transform: uppercase;
 }
+
 .resume .school {
   margin: 2em;
 }
+
 .resume .school-location {
   font-size: 1em;
   font-weight: 100;
   margin: .4em;
 }
+
 .resume .school-degree {
   font-size: 1.6em;
   font-weight: 500;
 }
+
 .resume .job-title, .job-company, .job-time {
   margin: 0;
 }
+
 .resume .job-title {
   margin: 10px;
     font-weight: 300;
     text-transform: uppercase;
 }
+
 .resume .job-time {
   font-size: 24px;
   text-transform: uppercase;
 }
+
 .resume .job-company {
   font-size: 24px;
     text-transform: uppercase;
     font-weight: 600;
 }
+
 .resume .job-location {
   margin: 10px 0;
   text-transform: uppercase;
   font-weight: 200;
   font-size: 18px;
 }
+
 .job-card {
   display: flex;
   justify-content: space-around;
   margin: 18px 0;
 }
+
 .job-card .job-info-left {
   width: 45%;
   display: flex;
   flex-direction: column;
   justify-content: center;
 }
+
 .job-card .job-info-right {
   width: 45%;
   display: flex;
   flex-direction: column;
   justify-content: center;
 }
+
   /* form */
+
 .form {
   display: flex;
   flex-direction: column;
@@ -317,19 +339,27 @@ legend {
 .project-container {
   width: 80vw;
 }
+
 .project h2 {
   font-size: 2.6em;
 }
+
 .project .project-img {
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
   align-items: center;
 }
+
 .project .img {
   width: 400px;
   margin: 20px;
 }
+
+.project-container a {
+  color: var(--purple);
+}
+
 @media screen and (max-width: 900px) {
  
   /* nav */
@@ -373,16 +403,20 @@ legend {
   .resume .resume-columns {
     flex-direction: column;
   }
+
   .resume .resume-columns .education, .resume-columns .skills, .skills-list {
     width: 80vw;
   }
+
   .jobs {
     width: 80vw;
   }
+
   .jobs .job-card {
     flex-direction: column;
     align-items: center;
   }
+
   .job-card .job-info-left, .job-card .job-info-right {
     width: 100%!important;
   }
@@ -392,11 +426,13 @@ legend {
   .form {
     width: 80vw;
   }
+
   .form .btn {
     margin-top: 24px;
   }
 
   /* projects  */
+
   .project .project-img {
     flex-direction: column;
   }
